--- a/TurismoAlojamenduakJava/pom.xml
+++ b/TurismoAlojamenduakJava/pom.xml
@@ -21,5 +21,85 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    
+ 
+	<dependency>
+		<groupId>org.json</groupId>
+		<artifactId>json</artifactId>
+		<version>20090211</version>
+	</dependency>
+
+	<dependency>
+		<groupId>com.google.code.gson</groupId>
+		<artifactId>gson</artifactId>
+		<version>2.8.6</version>
+		</dependency>
+
+<!-- https://mvnrepository.com/artifact/org.antlr/antlr4-runtime -->
+
+	<dependency>
+		<groupId>org.antlr</groupId>
+		<artifactId>antlr4-runtime</artifactId>
+		<version>4.7.2</version>
+	</dependency>
+
+<!-- https://mvnrepository.com/artifact/dom4j/dom4j -->
+
+	<dependency>
+		<groupId>dom4j</groupId>
+		<artifactId>dom4j</artifactId>
+		<version>1.6</version>
+	</dependency>
+
+<!-- https://mvnrepository.com/artifact/javassist/javassist -->
+
+	<dependency>
+		<groupId>javassist</groupId>
+		<artifactId>javassist</artifactId>
+	<version>3.12.1.GA</version>
+	</dependency>
+
+<!-- https://mvnrepository.com/artifact/javax.transaction/jta -->
+
+	<dependency>
+		<groupId>javax.transaction</groupId>
+		<artifactId>jta</artifactId>
+		<version>1.1</version>
+	</dependency>
+
+<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
+	<dependency>
+		<groupId>org.slf4j</groupId>
+		<artifactId>slf4j-api</artifactId>
+		<version>1.7.29</version>
+	</dependency>
+
+	<dependency>
+		<groupId>org.hibernate</groupId>
+		<artifactId>hibernate-core</artifactId>
+		<version>5.2.6.Final</version>
+	</dependency>
+
+	<dependency>
+		<groupId>mysql</groupId>
+		<artifactId>mysql-connector-java</artifactId>
+		<version>5.1.40</version>
+	</dependency>
+
+<!-- https://mvnrepository.com/artifact/javax.persistence/persistence-api -->
+
+	<dependency>
+		<groupId>javax.persistence</groupId>
+		<artifactId>persistence-api</artifactId>
+		<version>1.0.2</version>
+	</dependency>
+    
+    
+    
+    
+    
+    
+    
+    
   </dependencies>
 </project>
