--- a/TurismoAlojamenduakJava/pom.xml
+++ b/TurismoAlojamenduakJava/pom.xml
@@ -94,7 +94,18 @@
 		<version>1.0.2</version>
 	</dependency>
     
-    
+    <!-- https://mvnrepository.com/artifact/javax.json/javax.json-api -->
+	<dependency>
+   	 <groupId>javax.json</groupId>
+    	<artifactId>javax.json-api</artifactId>
+    	<version>1.1.4</version>
+	</dependency>
+    <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
+<dependency>
+    <groupId>com.fasterxml.jackson.core</groupId>
+    <artifactId>jackson-core</artifactId>
+    <version>2.10.1</version>
+</dependency>
     
     
     
